--- a/0x00-html_advanced/5-index.html
+++ b/0x00-html_advanced/5-index.html
@@ -14,7 +14,7 @@
         Header
     </header>
     <main>
-       <section>Hero secction</section>
+       <section>Hero section</section>
        <section>Services section</section>
        <section>Works section</section>
        <section>About section</section>
@@ -26,5 +26,4 @@
         Footer
     </footer>
 </body>
-
 </html>
