--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -19,18 +19,16 @@
         <h1>Homepage</h1>
        <section><h2>We help you build your brand!</h2></section>
        <section>
-            <h2>Services
+            <h2>Services</h2>
                 <h3>Design & Concept</h3>
                 <h3>Digital Strategy</h3>
                 <h3>Content Strategy</h3>
                 <h3>UX Design</h3>
                 <h3>Web Development</h3>
                 <h3>Social Media</h3>
-            </h2>
-                
        </section>
        <section><h2>Works</h2>
-            <article><h3> Design</h3></article>
+            <article><h3>Design</h3></article>
             <article><h3>Web Development</h3></article>
             <article><h3>Personal Brand</h3></article>
        </section>
