--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -17,7 +17,8 @@
     </header>
     <main>
         <h1>Homepage</h1>
-       <section><h2>We help you build your brand!</h2></section>
+        <section><h2>We help you build your brand!</h2>
+        </section>
        <section>
             <h2>Services</h2>
                 <h3>Design & Concept</h3>
