--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -41,7 +41,10 @@
 
       <!-- Hero section -->
       <section>
-        <div><h2>We help you build your brand!</h2><a href="#">Get started</a></div>
+        <div>
+            <h2>We help you build your brand!</h2>
+            <a href="#">Get started</a>
+        </div>
       </section>
 
       <!-- Services section -->
@@ -113,8 +116,8 @@
               quibusdam atque maxime cum!
             </p>
           </div>
+          <a href="./about.html">Learn more about us</a>
         </div>
-        <h3><p><a href="./about.html">Learn more about us</a></p></h3>
       </section>
 
       <!-- Latest news section -->
@@ -188,8 +191,8 @@
               Quae contraria sunt his, malane?
             </p>
           </div>
+          <a href="./contact.html">Get in touch</a>
         </div>
-        <p><a href="./contact.html">Get in touch</a></p>
       </section>
     </main>
 
