--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -152,7 +152,7 @@
             </article>
             <article>
               <div>
-                <img src="./images/pic-blog-02.jpg" alt="" width="305" height="205">
+                <img src="./images/pic-blog-02.jpg" alt="" width="305px" height="205px">
               </div>
               <p>Digital Life</p>
               <h3><a href="#">
@@ -168,7 +168,7 @@
             </article>
             <article>
               <div>
-                <img src="./images/pic-blog-03.jpg" alt="" width="305" height="205">
+                <img src="./images/pic-blog-03.jpg" alt="" width="305px" height="205px">
               </div>
               <p>Social</p>
               <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
